--- a/Program_P6.ipynb
+++ b/Program_P6.ipynb
@@ -6,7 +6,8 @@
       "name": "Program_P6.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/smeda10/Automatic-categorization-of-the-questions/blob/master/Program_P6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -136,7 +147,15 @@
         "    text = no_code(text)\n",
         "    text = clean_punct(text)\n",
         "    text = stopWordsRemove(text)\n",
-        "    text = lemmatization(text, ['NOUN', 'ADV'])"
+        "    text = lemmatization(text, ['NOUN', 'ADV'])\n",
+        "\n",
+        "    svc = OneVsRestClassifier(LinearSVC(random_state=0, C=1.0))\n",
+        "    svc.fit(X_tfidf_train, y_train)\n",
+        "    tags = \"\"\n",
+        "    tags_svc = np.where(y_pred_svc==1)[1]\n",
+        "    for tag in tags_svc:\n",
+        "    tags += \" \".join(multilabel_binarizer.classes_[tag])\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
